update package files

--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
 		"express": "^4.19.2",
 		"express-rate-limit": "^7.3.1",
 		"express-sslify": "^1.2.0",
-		"fs": "^0.0.1-security",
-		"js-yaml": "^4.1.0"
+		"fs": "^0.0.1-security"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.7.0",
