fix package files

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"homepage": "https://github.com/carbon-chat/carbon#readme",
 	"dependencies": {
 		"bcrypt": "^5.1.1",
+		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"express-rate-limit": "^7.3.1",
 		"express-sslify": "^1.2.0",
